Finishing movementation, implementing bouding box for the player and the asteroids, asteroids generation complete.

--- a/Assignment05CG/Assignment05CG.vcxproj
+++ b/Assignment05CG/Assignment05CG.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="image_helper.h" />
     <ClInclude Include="maths_funcs.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="Planet.h" />
     <ClInclude Include="RigidBody.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Skybox.h" />
@@ -179,6 +180,7 @@
     <ClCompile Include="image_helper.c" />
     <ClCompile Include="maths_funcs.cpp" />
     <ClCompile Include="Object.cpp" />
+    <ClCompile Include="Planet.cpp" />
     <ClCompile Include="RigidBody.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Skybox.cpp" />
